11-networkpolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

 name: deny-all

 namespace: apim


spec:

 podSelector: {}

 policyTypes:

 - Ingress
 - Egress
